--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,16 @@ body {
 .staffCard {
   margin: auto;
 }
+@media screen and (max-width: 767.9px) {
+.col3, .col6 {
+  display: none;
+} 
+.container {
+  text-align: center;
+} 
+}
+@media (min-width: 768px) and (max-width: 991.9px) {
+.col6 {
+  display: none;
+  }   
+}  
