--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,15 @@ body {
 .staffCard {
   margin: auto;
 }
+@media (min-width: 768px) and (max-width: 991.9px) {
+.col6 {
+  display: none;
+}
+.col2, .col3 {
+  margin: 0% 5%;
+} 
+    
+} 
 @media screen and (max-width: 767.9px) {
 .col3, .col6 {
   display: none;
@@ -32,8 +41,4 @@ body {
   text-align: center;
 } 
 }
-@media (min-width: 768px) and (max-width: 991.9px) {
-.col6 {
-  display: none;
-  }   
-}  
+ 
