--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,26 @@ body {
   margin: auto;
   font-size: larger;
 }
-.oneStaff {
+
+.name {
+  text-align: center;
+}
+.post {
+  width: 95%;
+  margin: auto;
+  padding-top: 10px;
+}
+.marginbot {
+  margin-bottom: 5%;
+  padding-left:5%;
+  padding-right:5%;
+  padding-top: 2%;
+}
+.salary {
+  background-color: aliceblue;
+  padding:2%
+}
+/* .oneStaff {
   margin-bottom: 5px;
   text-align: center;
   padding-top: 8px;
@@ -40,5 +59,5 @@ body {
 .container {
   text-align: center;
 } 
-}
+} */
  
